# analytics-microservice

./: .gitignore
backend/: Cargo.toml
backend/src/: main.rs
clickhouse/: docker-compose.yaml
clickhouse/fs/: setup.sql
frontend/: bun.lockb  vite.config.js
frontend/src/: App.css  App.jsx  events.js  main.jsx
kafka/: docker-compose.yml  validate.py
test_client/: Cargo.toml
test_client/src/: main.rs
